updated backend user auth with JWT

--- a/simpleCurd/src/main/resources/application.properties
+++ b/simpleCurd/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=simpleCurd
+server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgresDB
 spring.datasource.username=postgres
 spring.datasource.password=root
